# Videomator_core

./: CMakeCache.txt  CMakeLists.txt  README.md  conanfile.txt
src/: Blurer.cpp  Blurer.h  CMakeLists.txt
test/: CmakeLists.txt  test.cpp
